[package]
name = "gh-watch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
